--- a/Brainstorming.tex
+++ b/Brainstorming.tex
@@ -525,8 +525,8 @@
 						\toprule
 						Clusters & Iterations\\
 						\midrule
-						2 & 866\\
-						3 & 125 \\
+						2 & 845\\
+						3 & 137 \\
 						4& 8 \\
 						5& 1\\
 						\bottomrule
@@ -548,6 +548,57 @@
 			\item Bayesian statistics is a popular philosophy for quantifying uncertainty.
 			\item For the next step, I aim at applying Bayesian statistics idea to explain the uncertainty of hierarchical clustering.
 		\end{itemize}
+	\end{frame}
+
+	\section{Diffusion Tree Prior}
+	\begin{frame}{Diffusion Tree Process}
+	\small
+			Similar to Dirichlet process, Diffusion tree process also treats the distribution of data points as generated from an imaginary process.
+
+The first point is imagined to be a destination of a brownian motion for $t=1$ from point 0.
+
+The second point follows the same path as the first point until it breaks away at some point.
+
+			\begin{figure}[htbp]
+				\centering
+				\includegraphics[scale=0.3]{DTmotive.png}
+			\end{figure}
+	\end{frame}
+
+	\begin{frame}{Diffusion Tree Process}
+	\begin{figure}[htbp]
+			\centering
+			\includegraphics[scale=0.25]{simplifiedmotive.png}
+		\end{figure}
+		
+		Denote $A(t) = \int_{0}^{t}a(u)du$ as the probability of a point splitting from the original path by time $t$, and that the probability of splitting from a path that has been traversed by $m$ points within an infinitesimal interval to be $a(t)dt/m$. $a(t)$ is commonly chosen to be in the form $c/(1-t)$ or $b+d/(1-t)^2$.
+		
+	\end{frame}
+
+	\begin{frame}{Diffusion Tree Process}
+	
+	\begin{figure}[htbp]
+			\centering
+			\includegraphics[scale=0.2]{simplifiedmotive.png}
+		\end{figure}	
+	
+	The probability density is the product of two factors. The tree structure factor is
+	$$ e^{-A(t_a)} a(t_a) \times e^{-A(t_b)/2}(a(t_b)/2)\times e^{-A(t_b)/3}(1/3)e^{A(t_b) - A(t_c)}a(t_c) $$
+	The data factor is
+	\begin{align*}
+	\small
+		N(\left.x_b \right\vert 0, \sigma^2 t_b) & \times N(\left.x_a \right\vert x_b, \sigma^2 (t_a - t_b)) \times N(\left.x_1 \right\vert x_a ,\sigma^2 (1-t_a))\\ & \times N(\left.x_2 \right\vert x_a, \sigma^2 (1-t_a)) 
+		\times N(\left.x_c \right\vert x_b, \sigma^2 (t_c - t_b))\\ & \times N(\left.x_3 \right\vert x_c ,\sigma^2 (1-t_c)) \times N(\left.x_4 \right\vert x_c, \sigma^2 (1-t_c))
+	\end{align*}
+	\end{frame}
+
+	\begin{frame} {Diffusion Tree Process}
+		To generate a number of diffusion tree samples and understand the uncertainty of hierarchical clustering, we repeatedly take out a node and try to put it back into the tree.
+		
+		\begin{figure}[htbp]
+			\centering
+			\includegraphics[scale=0.32]{DTsampling.png}
+		\end{figure}
 	\end{frame}
 
 	\begin{frame}{Further Reading}
